AGREGADA: menú de empresa (crear producto)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="cantidad_del_producto">Cantidad del producto</string>
     <string name="filter">Filtrar RecyclerView items</string>
     <string name="añadir_producto">Añadir producto</string>
+    <string name="men_principal">Menú Principal</string>
 </resources>
